2011-12-19  Joel Brobecker  <brobecker@adacore.com>

	* elfread.c (elf_symtab_read): Ignore undefined symbols with
	nonzero addresses if they do not correspond to a .plt section
	when one is available in the objfile.

2011-12-17  Andreas Schwab  <schwab@linux-m68k.org>

	* cp-name-parser.y (cp_merge_demangle_parse_infos): Don't use
	obstack_empty_p.

2011-12-17  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c (amd64obsd_init_abi): Don't set
	regset_from_core_section.
	(amd64obsd_core_init_abi): New function that sets
	regset_from_core_section.
	(_initialize_amd64obsd_tdep): Use amd64obsd_core_init_abi for
	traditional core dumps.

2011-12-17  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c (amd64obsd_sigtramp_p): Detect new signal
	trampoline to be introduced in OpenBSD 5.0.

2011-12-17  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Fix build regression from the PR threads/10729 fix.
	* s390-nat.c (s390_insert_watchpoint, s390_remove_watchpoint): Use LP,
	not LP->PTID.

2011-12-16  Andrey Smirnov  <andrew.smirnov@gmail.com>

	* mi/mi-main.c (mi_cmd_list_thread_groups): Rename `optind' and
	`optarg' to `oind' and `oarg', respectively(-Wshadow).
	(mi_cmd_data_read_memory): Ditto.
	(mi_cmd_data_read_memory_bytes): Ditto.
	(mi_cmd_data_write_memory): Ditto.

2011-12-16  Andrey Smirnov  <andrew.smirnov@gmail.com>

	* mi/mi-getopt.c (mi_getopt): Rename `optind' and `optarg' to
	`oind' and `oarg', respectively(-Wshadow).
	(mi_valid_noargs): Ditto.

2011-12-16  Andrey Smirnov  <andrew.smirnov@gmail.com>

	* mi/mi-cmd-var.c (print_varobj): Rename `optind' and `optarg' to
	`oind' and `oarg', respectively(-Wshadow).

2011-12-16  Andrey Smirnov  <andrew.smirnov@gmail.com>

	* mi/mi-cmd-target.c (mi_cmd_target_file_get): Rename `optind' and
	`optarg' to `oind' and `oarg', respectively(-Wshadow).
	(mi_cmd_target_file_put): Ditto.
	(mi_cmd_target_file_delete): Ditto.

2011-12-16  Andrey Smirnov  <andrew.smirnov@gmail.com>
